# openec-lrctradeoff

./: README.md  analysis.md
analysis/: lrc_opt.py
lrc_opt/: lrc_opt.py
lrc_tradeoff/: lrc_tradeoff.py
maintenance-opt/: lrc_maint.py  mip1.py
mttdl/: mttdl_azurelrc140_128_15.py  mttdl_cl136_128_27_34.py  mttdl_rs132_128.py  mttdl_rs16_12.py  mttdl_rs9_6.py
openec-lrctradeoff/: .gitignore  log.txt
prototype/: .gitignore  CMakeLists.txt  README.md
prototype/conf/: config.ini
prototype/scripts/: distribute_blocks.py  extract_logs.py  extract_logs_a5.py  extract_logs_iter.py  extract_logs_pg.py  extract_logs_rd.py  extract_logs_sg.py  gen_bw_dist.py  gen_post_stripes_meta.py  gen_pre_stripes.py  generate_placements.sh  recover_post_placement.py  run_simulation_a4.py  run_simulation_a42.py
prototype/src/: CMakeLists.txt  Client.cc  Controller.cc  Gateway.cc  GenECStripe.cc
prototype/src/comm/: AgentNode.cc  AgentNode.hh  BlockIO.cc  BlockIO.hh  CMakeLists.txt  ClientNode.cc  ClientNode.hh  CmdDist.cc  CmdDist.hh  CmdHandler.cc  CmdHandler.hh  Command.cc  Command.hh  ComputeWorker.cc  ComputeWorker.hh  CtrlNode.cc  CtrlNode.hh  GatewayNode.cc  GatewayNode.hh  Node.cc  Node.hh
prototype/src/include/: include.hh
prototype/src/model/: AzureLRC.cc  AzureLRC.hh  CMakeLists.txt  ClusterSettings.cc  ClusterSettings.hh
prototype/src/util/: CMakeLists.txt  Config.cc  Config.hh  MemoryPool.cc  MemoryPool.hh  MessageQueue.hh  MultiWriterQueue.h  ThreadPool.hh  Utils.cc  Utils.hh  atomicops.h  blockingconcurrentqueue.h  readerwriterqueue.h
(+82 files in other folders)
